Updated after review deadline 1

--- a/README
+++ b/README
@@ -7,4 +7,5 @@
 
 ** 20170509 **
 #### Gjort:
-* Fått pintos att kompilera 
+* 20170509: Fått pintos att kompilera 
+* 20180410: Redovisat Deadline 1
